<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoFragment"
    tools:ignore="ContentDescription">

    <cn.jiguang.demo.view.TitleLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:back_iv_drawable="@drawable/d_back_icon"
        app:divider_color="@color/color_top_divider"
        app:has_status_bar="true"
        app:layout_constraintTop_toTopOf="parent"
        app:left_layout_padding_left="12dp"
        app:right_layout_padding_right="10dp"
        app:show_back_iv="true"
        app:title_bar_height="50dp"
        app:title_text="我的"
        app:title_text_size="20sp" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="90dp"
        android:background="@color/color_bg"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textColor="@color/color_top_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/iv_icon" />

    <TextView
        android:id="@+id/tv_pkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkg"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
        app:layout_constraintLeft_toLeftOf="@id/tv_text" />

    <ImageView
        android:id="@+id/iv_pkg_copy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/d_ic_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_pkg"
        app:layout_constraintLeft_toRightOf="@id/tv_pkg"
        app:layout_constraintTop_toTopOf="@id/tv_pkg" />

    <View
        android:id="@+id/divider_bottom_appkey"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/divider" />


    <TextView
        android:id="@+id/tv_appKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:text="@string/appKey"
        android:textColor="@color/color_top_text"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/d_ic_appkey"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_appkey"
        app:layout_constraintLeft_toLeftOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_appkey" />

    <TextView
        android:id="@+id/tv_appKey_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:drawablePadding="2dp"
        android:text="@string/text_info"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_appKey"
        app:layout_constraintRight_toLeftOf="@id/iv_appkey_copy" />

    <ImageView
        android:id="@+id/iv_appkey_copy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/d_ic_info"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_appkey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_appkey" />

    <View
       android:layout_marginTop="2px"
        android:id="@+id/divider_bottom_imei"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_appkey" />


    <TextView
        android:id="@+id/tv_imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:text="@string/imei"
        android:textColor="@color/color_top_text"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/d_ic_imei"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_imei"
        app:layout_constraintLeft_toLeftOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_imei" />

    <TextView
        android:id="@+id/tv_imei_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:drawablePadding="2dp"
        android:text="@string/text_info"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_imei"
        app:layout_constraintRight_toLeftOf="@id/iv_imei_copy" />

    <ImageView
        android:id="@+id/iv_imei_copy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/d_ic_info"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_imei"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_imei" />

    <View
        android:layout_marginTop="2px"
        android:id="@+id/divider_bottom_did"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_imei" />


    <TextView
        android:id="@+id/tv_did"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:text="@string/deviceid"
        android:textColor="@color/color_top_text"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/d_ic_deviceid"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_did"
        app:layout_constraintLeft_toLeftOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_did" />

    <TextView
        android:id="@+id/tv_did_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:drawablePadding="2dp"
        android:text="@string/text_info"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_did"
        app:layout_constraintRight_toLeftOf="@id/iv_did_copy" />

    <ImageView
        android:id="@+id/iv_did_copy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/d_ic_info"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_did"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_did" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_bg"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_did" />


    <View
        android:id="@+id/divider_bottom_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/divider2" />


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:text="@string/version"
        android:textColor="@color/color_top_text"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/d_ic_version"
        app:layout_constraintBottom_toBottomOf="@id/divider_bottom_version"
        app:layout_constraintLeft_toLeftOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/divider_bottom_version" />

    <TextView
        android:id="@+id/tv_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawablePadding="2dp"
        android:text="@string/text_info"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_version"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_bg"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_version" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/desc"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_line"
        app:layout_constraintBottom_toBottomOf="@id/tv_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_desc"
        app:layout_constraintTop_toTopOf="@id/tv_desc" />


    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/color_line"
        app:layout_constraintBottom_toBottomOf="@id/tv_desc"
        app:layout_constraintLeft_toRightOf="@id/tv_desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_2"
        android:textColor="@color/color_top_info"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>